# marvin-chess

./: .gitignore  CMakeLists.txt  Makefile  README.md
import/cfish/: misc.c  misc.h  nnue.c  nnue.h
import/fathom/: tbconfig.h  tbcore.c  tbprobe.c
import/nnue/: evaluate_nnue.cpp  nnue_common.h  nnue_feature_transformer.h
import/nnue/features/: feature_set.h  half_kp.cpp  half_kp.h  index_list.h
res/: eval.nnue  marvin.ini
scripts/: genevalparams.py  gennnuedata.py  genquiet.py  gensfen.py  gentrainingset.py
src/: bitboard.c  bitboard.h  board.c  board.h  chess.c  chess.h  config.h  data.c  data.h  debug.c  debug.h  egtb.c  egtb.h  engine.c  engine.h  eval.c  eval.h  evalparams.c  evalparams.h  fen.c  fen.h  hash.c  hash.h  history.c  history.h  key.c  key.h  main.c  movegen.c  movegen.h  moveselect.c  moveselect.h  nnue.c  nnue.cpp  nnue.h  nnue_defs.h  nnue_types.h  nnueif.c  nnueif.h  polybook.c  (+39 more)
test/: epd2uci.py  frc.perft  perft.py  standard.perft
tools/: generate_training_data.py
